--- a/LightBeacon/LightBeacon/LBARightVC.xib
+++ b/LightBeacon/LightBeacon/LBARightVC.xib
@@ -15,12 +15,40 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="EdT-dv-2Il">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rBA-lo-rSW">
+                    <rect key="frame" x="0.0" y="10" width="600" height="44"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="44" id="kjW-EZ-vQr"/>
+                    </constraints>
+                    <textAttributes key="titleTextAttributes">
+                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    </textAttributes>
+                    <items>
+                        <navigationItem title="Favorites" id="va6-jh-Mah">
+                            <barButtonItem key="leftBarButtonItem" systemItem="done" id="PC8-Pa-nHo">
+                                <connections>
+                                    <action selector="doneButtonTapped:" destination="-1" id="o9o-1X-umx"/>
+                                </connections>
+                            </barButtonItem>
+                        </navigationItem>
+                    </items>
+                </navigationBar>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="1hC-Bm-C3j">
+                    <rect key="frame" x="0.0" y="54" width="600" height="546"/>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    <color key="sectionIndexBackgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                 </tableView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="1hC-Bm-C3j" firstAttribute="top" secondItem="rBA-lo-rSW" secondAttribute="bottom" id="2r4-fW-qej"/>
+                <constraint firstAttribute="bottom" secondItem="1hC-Bm-C3j" secondAttribute="bottom" id="Imb-RJ-iEC"/>
+                <constraint firstAttribute="trailing" secondItem="1hC-Bm-C3j" secondAttribute="trailing" id="Qgc-yt-aY3"/>
+                <constraint firstAttribute="trailing" secondItem="rBA-lo-rSW" secondAttribute="trailing" id="fTN-fc-JwT"/>
+                <constraint firstItem="rBA-lo-rSW" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="fh1-Dg-Roc"/>
+                <constraint firstItem="rBA-lo-rSW" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="10" id="g3K-s9-0xg"/>
+                <constraint firstItem="1hC-Bm-C3j" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="oO3-sU-8Hu"/>
+            </constraints>
         </view>
     </objects>
 </document>
